--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 
 .bg-gradient-primary {
     background-color: #092040; /* Start color */
-    background-image: linear-gradient(180deg, #092040 50%, #306CC0 100%); /* Gradient from #092040 to #306CC0 */
+    background-image: linear-gradient(180deg, #092040 50%, #306CC0 100%);
     background-size: cover;
 }
 
@@ -14,7 +14,7 @@
 
 @media (min-width: 768px) {
     .sidebar.toggled .sidebar-brand img {
-        max-width: 100px; /* Adjust the max-width value as needed */
+        max-width: 100px;
     }
 }
 
@@ -24,6 +24,10 @@
         max-width: 100px;
     }
 }
+
+
+
+
 
 
 
